[project]
name = "runelabs-watchdata"
version = "0.1.0"
description = ""
authors = [
    {name = "Emily Zhao",email = "2023zhaoe83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "runelabs_watchdata", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
